@@ -2,11 +2,9 @@ package xklaim.coordination;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import coordination.JointTrajectory;
-import coordination.JointTrajectoryPoint;
 import java.util.Arrays;
 import java.util.List;
 import klava.topology.KlavaProcess;
-import org.eclipse.xtext.xbase.lib.Conversions;
 import org.eclipse.xtext.xbase.lib.InputOutput;
 import ros.Publisher;
 import ros.RosBridge;
@@ -41,11 +39,9 @@ public class After_pick extends KlavaProcess {
       double tol = 0.007;
       if ((norm <= tol)) {
         InputOutput.<String>println(String.format("I picked the object"));
-        final JointTrajectoryPoint jointTrajectoryPoint = new JointTrajectoryPoint().positions(
-          ((double[])Conversions.unwrapArray(Arrays.<Double>asList(
-            Double.valueOf((-3.1415)), Double.valueOf((-0.2862)), Double.valueOf((-0.5000)), Double.valueOf(3.1400), Double.valueOf(1.6613), Double.valueOf((-0.0142))), double.class)));
-        final JointTrajectory afterPick = new JointTrajectory().point(jointTrajectoryPoint).jointNames(
-          ((String[])Conversions.unwrapArray(Arrays.<String>asList("joint1", "joint2", "joint3", "joint4", "joint5", "joint6"), String.class)));
+        final JointTrajectory afterPick = new JointTrajectory().positions(
+          new double[] { (-3.1415), (-0.2862), (-0.5000), 3.1400, 1.6613, (-0.0142) }).jointNames(
+          new String[] { "joint1", "joint2", "joint3", "joint4", "joint5", "joint6" });
         pub.publish(afterPick);
         bridge.unsubscribe("/gripper_controller/state");
       }
