@@ -1,7 +1,6 @@
 package xklaim.coordination
 
 import coordination.JointTrajectory
-import coordination.JointTrajectoryPoint
 import java.util.Arrays
 import java.util.List
 import ros.Publisher
@@ -43,18 +42,14 @@ proc After_pick() {
 			// }  }
 			if (norm <= tol) {
 				println(String.format("I picked the object"))
-				// performing the referent position 
-				val jointTrajectoryPoint = new JointTrajectoryPoint()
-					.positions(
-						Arrays.asList(
-							-3.1415, -0.2862, -0.5000, 3.1400, 1.6613, -0.0142
-						));
-				// JointTrajectory Initialization
+				// JointTrajectory Initialization performing the referent position
 				val JointTrajectory afterPick = new JointTrajectory()
-					.point(jointTrajectoryPoint)
-					.jointNames(
-						Arrays.asList("joint1", "joint2", "joint3", "joint4", "joint5", "joint6")
-					);
+					.positions(#[
+						-3.1415, -0.2862, -0.5000, 3.1400, 1.6613, -0.0142
+					])
+					.jointNames(#[
+						"joint1", "joint2", "joint3", "joint4", "joint5", "joint6"
+					]);
 				pub.publish(afterPick);
 				bridge.unsubscribe("/gripper_controller/state");
 			}
